@@ -1,8 +1,0 @@
-#!/bin/sh
-
-set -e
-
-if [ "$1" = "purge" ] ; then
-	update-rc.d drbd remove >/dev/null
-fi
-#DEBHELPER#
