@@ -1,28 +1,0 @@
-#!/bin/sh
-
-# This script silently ignores the initscript return code if we remove
-# or deconfigure the package or carefully pay attention to it if we
-# upgrade the package.
-
-# Cyril Bouthors <cyril@bouthors.org>
-# Wed Feb 16 21:01:11 CET 2005
-
-set -e
-
-if [ -x "/etc/init.d/drbd" ]
-then
-    case "$1" in
-	remove|deconfigure|upgrade)
-	    # we don't stop the drbd resources as it's not absolutely needed during
-	    # a utils upgrade and it would mean that unattended upgrades cause
-	    # outages
-	    ;;
-
-	*)
-	    echo "prerm called with unknown argument \`$1'" >&2
-	    exit 0
-	    ;;
-    esac
-fi
-
-#DEBHELPER#
